# godot-dojo

./: .actrc  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt_bak  FEATURES_draft.md  LICENSE  Makefile  README.md  SConstruct  SConstruct_bak  SConstruct_w  changelog-gen.sh  compile_commands.json  manifest_dev.json  methods.py  plugin_template.gdextension.in  project-state.md  readme.md  run-actions_locally.sh
.github/workflows/: build-all.yml  build-double.yml  build_cross.yml  reusable-build.yml
addons/godot-dojo/: plugin.cfg
android/: AndroidManifest.xml  GodotDojoBridge.gdap  GodotDojoBridge.kt  settings.gradle.kts
android/plugin/: build.gradle.kts
android/plugin/demo/: main.gd  main.tscn  project.godot
android/plugin/export_scripts_template/: export_plugin.gd  plugin.cfg
android/src/main/: AndroidManifest.xml
bindings/controller/: controller.cpp  controller.hpp  controller_scaffolding.hpp
bindings/dojo/: dojo.cpp  dojo.hpp  dojo_scaffolding.hpp
bindings/web/: cors_proxy.py  index.html
cmake/: FindRust.cmake  PatchDojoHpp.cmake
demo/: .gitignore  icon.svg.import  main.gd  main.tscn  node_2d.gd  node_2d.gd.uid  node_2d.tscn  player.gd  player.tscn  project.godot  user_info.gd  user_info.gd.uid  user_info.tscn
demo/assets/: arrow_down.png.import  arrow_down_p.png.import  arrow_left.png.import  arrow_left_p.png.import  arrow_right.png.import  arrow_right_p.png.import  arrow_up.png.import  arrow_up_p.png.import  retry-svgrepo-com.svg.import  tile.png.import
demo/autoload/: connection.gd  connection.tscn
demo/connection/: connection.gd  connection.tscn
demo/debug/: Tests.gd  Tests.gd.uid  Tests.tscn  abi_generator.gd  constants.gd  constants.gd.uid  deeplink.gd  deeplink.gd.uid  deeplink.tscn  main.gd  main.tscn
demo/experimental/: abi_generator.gd  abi_generator.gd.uid  abi_generator.tscn
demo/game/: demo.gd  demo.tscn
demo/resources/: move_call.tres  move_to_call.tres  policies.tres  reset_spawn_call.tres  reset_spawn_policy.tres  spawn_call.tres
demo/tools/: controllers.gd  off_screen_indicator.gd
demo/ui/: chat_box.gd  status_indicator.gd  status_indicator.tscn
doc_classes/: Account.xml  AchievementProgressionSubscription.xml  AchievementQuery.xml  ActivityQuery.xml  ActivitySubscription.xml  AggregationQuery.xml  AggregationSubscription.xml  AndroidExportPlugin.xml  CallbackUtils.xml  CompositeClause.xml  ContractQuery.xml  ContractSubscription.xml  ControllerAccount.xml  ControllerHelper.xml  ControllerQuery.xml  DeprecatedOrderBy.xml  DojoAchievementQuery.xml  DojoActivityQuery.xml  DojoAggregationQuery.xml  DojoArray.xml  DojoC.xml  DojoCallback.xml  DojoClause.xml  DojoContractQuery.xml  DojoController.xml  DojoControllerQuery.xml  DojoEditorPlugin.xml  DojoEnum.xml  DojoHelpers.xml  DojoOption.xml  DojoOptionArrayFieldElement.xml  DojoOptionChar.xml  DojoOptionClause.xml  DojoOptionFieldElement.xml  DojoOptionTransactionFilter.xml  DojoOptionU256.xml  DojoOptionU32.xml  DojoOptionU64.xml  DojoOptionf64.xml  DojoOwner.xml  (+53 more)
dojo-c-test-project/assets/: arrow_up_p.png.import
dojo-c-test-project/ui/: status_indicator.gd.uid
dojo-starter-godot-project/: .gitignore  README.md  icon.svg.import  project.godot
dojo-starter-godot-project/assets/: arrow_down.png.import  arrow_left.png.import  arrow_left_p.png.import  arrow_right.png.import  arrow_right_p.png.import  arrow_up.png.import  tile.png.import
dojo-starter-godot-project/connection/: connection.gd  connection.gd.uid  connection.tscn  http_tools.gd  http_tools.gd.uid  log_level_status.gd  log_level_status.gd.uid  log_level_status.tscn  logger_level_toggle.gd  logger_level_toggle.gd.uid  template.html
dojo-starter-godot-project/game/: game.gd  game.gd.uid  game.tscn
dojo-starter-godot-project/tools/: controllers.gd  controllers.gd.uid  http_pinger.gd  http_pinger.gd.uid  off_screen_indicator.gd.uid
dojo-starter-godot-project/ui/: chat_box.gd.uid  chat_box.tscn  status_indicator.tscn
godot-dojo-core/: Cargo.toml  build.rs
godot-dojo-core/.cargo/: config.toml
godot-dojo-core/src/: lib.rs
include/: controller_types.h  debug_macros.h  dojo_c_gdextension.h  dojo_types.h  dojo_types.hpp  register_types.h
include/classes/: account.h  account_controller.h  controller_account.h  dojo_controller.h  dojo_owner.h  dojo_session_account.h  event_subscription.h  torii_client.h
include/editor/: android_export_plugin.h  dojo_editor_plugin.h  dojo_editor_plugin.hpp  export_plugin.hpp
include/export_plugin/: dojo_editor_plugin.h  dojo_export.h
include/node/: dojo_controller.hpp  dojo_session_account.hpp  torii_client.hpp
include/ref_counted/: dojo_option.h  query_builder.hpp
include/resources/: dojo_call.h  dojo_order_by.h  dojo_policies.h  dojo_policy.h  dojo_query.h  dojo_query_base.h  dojo_subscription.h  policy.h
include/temp/: dojo_helper.h
include/tools/: controller_helper.h  dojo_bridge.h  dojo_helper.h  dojo_http.h  godot_helper.hpp  http_pinger.hpp  logger.h  logger.hpp  num.hpp  rat.hpp
include/types/: big_int.h  dojo_u256.h  primitive.h  torii_client.h
include/variant/: field_element.h  primitive.h  ty.h
patches/: 0002-polyfill-std-endian-for-cpp17.patch  fix_dojo_c_incomplete_type.patch
src/: dojo_c_gdextension.cpp  register_types.cpp
src/classes/: account.cpp  controller_account.cpp  dojo_controller.cpp  dojo_session_account.cpp  event_suscription.cpp  torii_client.cpp
src/editor/: dojo_editor_plugin.cpp  export_plugin.cpp
src/export_plugin/: dojo_export.cpp
src/node/: dojo_controller.cpp  dojo_session_account.cpp  torii_client.cpp
src/ref_counted/: query_builder.cpp
src/temp/: dojo_helper.cpp
src/tools/: controller_helper.cpp  dojo_bridge.cpp  dojo_helper.cpp  dojo_http.cpp  godot_helper.cpp  http_pinger.cpp
src/types/: big_int.cpp  dojo_u256.cpp  primitive.cpp
src/variant/: field_element.cpp  primitive.cpp
test_project/dojo-c-test-project/: README.md  project.godot
tools/: android.py  common.py  ios.py  linux.py  macos.py  rust.py  web.py  windows.py
web/: godot-template.html  head_include.html
(+152 files in other folders)
