[package]
name = "godot-dojo-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
controller-uniffi = { git = "https://github.com/dannroda/controller.c", rev = "428c8ef" }
dojo-uniffi = { git = "https://github.com/dannroda/dojo.c", rev = "cac318a" }

[build-dependencies]
dojo-uniffi = { git = "https://github.com/dannroda/dojo.c", rev = "cac318a", artifact = "bin:uniffi-bindgen-cpp" }
controller-uniffi = { git = "https://github.com/dannroda/controller.c", rev = "428c8ef", artifact = "bin:uniffi-bindgen-cpp" }
cargo_metadata = "0.23.0"
build-print = "1.0.1"

[patch.crates-io]
starknet-crypto = { git = "https://github.com/glihm/starknet-rs", rev = "c1e7e19f45f9fad6ea2796da9b7b3dcf8f9f2b82" } # Force to fix crate version mismatch
